# libtinycpp

./: 0Temp.cpp  Readme.md  _Temp.cpp  install.sh  main.cpp  meson.build  readme.txt  stdmin.pc  test_main.cpp  tinycpp.pc  tinycpp.pro  tinycpp.py
autre/: _Temp.cpp  _tinycpp-clang.py  autre.7z  test_main.h
lib/: CDirParser.cpp  CDirParser.h  CDirent.cpp  CDirent.h  CFile.cpp  CFile.h  CFileInfo.cpp  CFileInfo.h  CIniFile.cpp  CIniFile.h  CIniLine.cpp  CIniLine.h  CIniSection.cpp  CIniSection.h  CList.cpp  CList.h  CProcess.cpp  CProcess.h  CRegExp.cpp  CRegExp.h  CRegKey.cpp  CRegKey.h  CString.cpp  CString.h  CStringList.cpp  CStringList.h  deletefunc.h  fnmatch.cpp  libapp.cpp  libapp.h  libconv.cpp  libconv.h  libfile.cpp  libfile.h  libhtml.cpp  libhtml.h  libpath.cpp  libpath.h  libstr.cpp  libstr.h  (+7 more)
tests/: test_CDirParser.cpp  test_CDirent.cpp  test_CFile.cpp  test_CFileInfo.cpp  test_CIniFile.cpp  test_CList.cpp  test_CProcess.cpp  test_CRegKey.cpp  test_CString.cpp  test_CStringList.cpp  test_fnmatch.cpp  test_libapp.cpp  test_libfile.cpp  test_libhtml.cpp  test_libpath.cpp  test_libstr.cpp  test_strconv.cpp  test_strfuncs.cpp
tests/test_dir/: inifile.ini  streol.txt
